# cr4te

./: .gitignore  LICENSE  MANIFEST.in  README.md  SCREENSHOTS.md  config.py  cr4te.py  html_builder.py  json_builder.py  pyproject.toml  requirements.txt  utils.py
config/: cr4te_config.json
css/: base.css  creator.css  project.css
data/: cr4te_config.json
enums/: image_sample_strategy.py
example_data/: README.md
info/: CSS_DESIGN_TOKEN_REFACTORING_PLAN.md  CUSTOM_THEMING_PLAN.md  EMPTY_STATES_PLAN.md  HOW-TOS.md  HOW-TOs.md  METADATA_PRESENTATION_REFACTORING_PLAN.md  PORTRAIT_REFACTORING_PLAN.md  REFACTORING_GUIDELINES.md  REQUIREMENTS.md  SCREENSHOTS.md  STYLE-GUIDE.md  TODO.md
js/: audio_player.js  filter_creators.js  filter_projects.js  gallery_builder.js  lightbox.js
src/: config.py  config_manager.py  constants.py  html_builder.py  json_builder.py  utils.py
templates/: _theme_dropdown.html.j2  collaboration.html.j2  creator.html.j2  creator_collaboration.html.j2  creator_overview.html.j2  creator_solo.html.j2  overview.html.j2  project.html.j2  project_overview.html.j2  project_page.html.j2  tags.html.j2
tests/: test_build_runner.py  test_build_summary.py  test_config_manager.py  test_creator_classification.py  test_html_build.py  test_html_paths.py  test_image_utils.py  test_js_contracts.py  test_library_builder.py  test_library_issues.py  test_library_metadata.py  test_library_scan.py  test_media_cache.py  test_media_counts.py  test_media_staging.py  test_metadata_fields.py  test_metadata_manager.py  test_metadata_templates.py  test_taxonomy.py  (+9 more)
(+177 files in other folders)
